--- a/my blog/index.html
+++ b/my blog/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezra Blog</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="wrapper">
             <div class="logo">
-                <img src="https://i.pinimg.com/736x/50/12/1b/50121bbe7597e7909b30bb7bfb880049.jpg">
+                <img src="https://i.pinimg.com/564x/45/14/26/451426125fa7e28bfbe121c3bcd9c0ca.jpg">
                 <a href="">Ezra Zackysa </a>
             </div>
             <div class="menu">
                 <ul>
-                    <!-- Menu items go here -->
+                    <li class="active"><a href="#">About</a></li>
+                    <li><a href="#">Portofolio</a></li>
+                    <li><a href="#">Contac</a></li>
+                    <li class="btn"><a href="#">just click</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div class="content">
+        <div class="main-text">
+            <h6>
+                lol
+            </h6>
+            <h1>
+                web web
+            </h1>
+            <p>
+                just for funn but this web is serios for my web
+            </p>
+        </div>
+    </div>
+
 </body>
 </html>
