--- a/my blog/index.html
+++ b/my blog/index.html
@@ -41,5 +41,20 @@
         </div>
     </div>
 
+    <div class="peler">
+        <div class="main-text">
+            <h6>
+                lol
+            </h6>
+            <h1>
+                web web
+            </h1>
+            <p>
+                just for funn but this web is serios for my web
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
