--- a/my blog/index.html
+++ b/my blog/index.html
@@ -30,14 +30,19 @@
     <div class="content">
         <div class="main-text">
             <h6>
-                lol
+                Mahasiswa Informatika dan Penggemar Teknologi
             </h6>
             <h1>
-                web web
+                Halo, saya Ezra Zackysa Yendi Putra
             </h1>
             <p>
-                just for funn but this web is serios for my web
+                Saat ini saya sedang menempuh studi di jurusan Informatika dan senang menjelajahi dunia 
+                teknologi, khususnya dalam pemrograman, pengembangan web, dan keamanan siber. Selain belajar, 
+                saya juga aktif mengasah keterampilan lain seperti membuat game dan mengembangkan website. Saya 
+                punya impian untuk bisa melanjutkan studi ke Jepang, dan berharap bisa memberikan kontribusi di 
+                bidang teknologi di masa depan. Terima kasih sudah berkunjung ke website saya!
             </p>
+            <img src="https://i.pinimg.com/474x/50/12/1b/50121bbe7597e7909b30bb7bfb880049.jpg">
         </div>
     </div>
 
